  shows the addresses of superblocks (code blocks) as they are executed.

- Cachegrind now uses directory names where possible in its output files.
  This means that the -I option to 'cg_annotate' should not be needed in
  most cases.  It also means it can correctly handle the case where two
  source files in different directories have the same name.

Developer-visible changes:

- New debugging command line options: --debug-dump, --trace-symtab-patt...

- The names of some functions and types within the Vex IR have changed.
  (Run 'svn log -r1689 VEX/pub/libvex_ir.h' for full details.)
  So any existing tools will have to be updated to reflect these
  changes.  The new names should be clearer.  The file
  VEX/pub/libvex_ir.h is also much better commented, and serves as the
  best documentation about Vex.


Release 3.2.3 (29 Jan 2007)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Unfortunately 3.2.2 introduced a regression which can cause an
assertion failure ("vex: the `impossible' happened: eqIRConst") when
running obscure pieces of SSE code.  3.2.3 fixes this and adds one
more glibc-2.5 intercept.  In all other respects it is identical to
3.2.2.  Please do not use (or package) 3.2.2; instead use 3.2.3.

n-i-bz   vex: the `impossible' happened: eqIRConst
n-i-bz   Add an intercept for glibc-2.5 __stpcpy_chk

(3.2.3: 29 Jan 2007, vex r1732, valgrind r6560).


Release 3.2.2 (22 Jan 2007)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.2.2 fixes a bunch of bugs in 3.2.1, adds support for glibc-2.5 based
systems (openSUSE 10.2, Fedora Core 6), improves support for icc-9.X
compiled code, and brings modest performance improvements in some
areas, including amd64 floating point, powerpc support, and startup
responsiveness on all targets.

The fixed bugs are as follows.  Note that "n-i-bz" stands for "not in
bugzilla" -- that is, a bug that was reported to us but never got a
bugzilla entry.  We encourage you to file bugs in bugzilla
(http://bugs.kde.org/enter_valgrind_bug.cgi) rather than mailing the